# surgical_tools_detector

./: .gitignore  CMakeLists.txt  main.cpp  requirements-export.txt
.github/workflows/: ci.yaml  ci.yml
assets/: labels.dict
core/: Detection.h  DetectorBackend.h  FontRenderer.h  LabelProvider.h  Renderer.h
detector/: YoloOnnxDetector.cpp  YoloOnnxDetector.h
label/: DictLabelProvider.cpp  DictLabelProvider.h
render/: OpenCVFontRenderer.cpp  OpenCVFontRenderer.h  OpenCVRenderer.cpp  OpenCVRenderer.h
scripts/: export_model.py
